--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Crear artículo | Biblioteca sistedes</title>
+{% endblock %}
 {% block form %}
 <h2><u> Crear artículo </u></h2>
 <div  class="form-style-10">
