--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Detalle artículo | Biblioteca sistedes</title>
+{% endblock %}
 {% block container %}
 <h2><u> Detalle artículo </u></h2>
 {% csrf_token %}
