--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Crear autor | Biblioteca sistedes</title>
+{% endblock %}
 {% block form %}
 <h2><u> Crear autor </u></h2>
 {% csrf_token %}
