--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -1,7 +1,9 @@
 <html lang="en-us">
 <head>
     {% load static %}
-    <title>Log in | Biblioteca sistedes</title>
+    {% block title %}
+    <title>Inicio de sesión | Biblioteca sistedes</title>
+    {% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
