--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conference_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conference_detail.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Detalle conferencia | Biblioteca sistedes</title>
+{% endblock %}
 {% block container %}
 <div style="width: 90%; margin: 0 auto; height: 80%; margin-top: 5%;">
 <h2><u> Detalle conferencia </u></h2>
