--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conferences.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conferences.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base.html' %}
+{% block title %}
+	<title>Conferencias | Biblioteca sistedes</title>
+{% endblock %}
 {% block content %}
 {% csrf_token %}
 <header class="wrapper">
