--- a/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Inicio de sesión | Biblioteca sistedes</title>
+{% endblock %}
 {% block container %}
 <!-- Container -->
 <div id="container" style="margin-top: 200px;">
