--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Registro de usuario | Biblioteca sistedes</title>
+{% endblock %}
 {% block form %}
 <h2><u> Registrar usuario </u></h2>
 {% csrf_token %}
