--- a/biblioteca_sistedes/templates/biblioteca_sistedes/get_edition.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/get_edition.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base.html' %}
+{% block title %}
+	<title>Info edición | Biblioteca sistedes</title>
+{% endblock %}
 {% block content %}
 {% csrf_token %}
 <article class="page page_1781">
