--- a/biblioteca_sistedes/templates/biblioteca_sistedes/get_track.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/get_track.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base.html' %}
+{% block title %}
+	<title>Info track | Biblioteca sistedes</title>
+{% endblock %}
 {% block content %}
 {% csrf_token %}
 <article class="page page_168">
