--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -1,9 +1,13 @@
 {% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Lista de palabras clave | Biblioteca sistedes</title>
+{% endblock %}
 {% block container %}
 		<h2><u> Palabras clave </u></h2>
 		Buscador: <input id="myInput" type="text" onkeyup="search_table()">
 		</br>
 		</br>
+		{% if object_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -13,12 +17,11 @@
 
 			</thead>
 			<tbody>
-				{% if object_list %}
 				{% for key in object_list %}
 				<tr style="border-bottom: 1px solid black;">
 					<td>{{ key.id }}</td>
 
-					<td ><div style="width: 500px; height: auto; overflow: auto">{{ key.name }}</div></td>
+					<td >{{ key.name }}</td>
 
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/keyword_view/{{ key.id }}/">Ver</a>
@@ -30,5 +33,7 @@
 
 			</tbody>
 		</table>
-
+		{% else %}
+		<h1>No hay registros de palabras clave</h1>
+		{% endif %}
 {% endblock%}
