--- a/biblioteca_sistedes/templates/biblioteca_sistedes/search_engine.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/search_engine.html
@@ -1,4 +1,7 @@
 {% extends 'biblioteca_sistedes/base.html' %}
+{% block title %}
+	<title>Resultados búsqueda | Biblioteca sistedes</title>
+{% endblock %}
 {% block content %}
 {% csrf_token %}
 
