--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_detail.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>{% extends 'biblioteca_sistedes/base_form.html' %}
+{% extends 'biblioteca_sistedes/base_form.html' %}
+{% block title %}
+	<title>Detalle usuario | Biblioteca sistedes</title>
+{% endblock %}
 {% block container %}
 <h2><u> Detalle usuario </u></h2>
 {% csrf_token %}
