--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -190,10 +190,9 @@
         </div>
         {% endblock %}
 
-        <div class="divContenido">
+        <div class="divContenido" style="margin-top: 40px;">
             {% block content %}
-            <div id="navegacionTop"></div>
-            <article class="page page_378">
+            <article>
                 <header class="wrapper">
                     <h1>Inicio</h1>
                 </header>
@@ -245,7 +244,7 @@
                 href="" target="_blank"
                 title="Revisar política de cookies (este enlace se abrirá en una ventana emergente)">política de
             cookies</a>.</p>
-        <p><a class="cookies-close" href="#">aceptar</a></p></div>
+        <p><a class="cookies-close" href="#" onclick="close_cookies()">aceptar</a></p></div>
 </div>
 </body>
 </html>
