--- a/biblioteca_sistedes/templates/biblioteca_sistedes/news.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/news.html
@@ -5,6 +5,7 @@
 {% block content %}
 {% csrf_token %}
 <article>
+    <div id="navegacionTop"></div>
     <header class="wrapper">
         <h1>Bienvenidos!</h1>
     </header>
