--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
@@ -5,9 +5,8 @@
 {% block form %}
 <h2><u> Crear autor </u></h2>
 {% csrf_token %}
-<div class="form-style-10">
-    <form action='' method='post'>
-        <div class="column">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
             <div class="form-group">
                 <label for="name_au"><h4>Nombre:</h4></label> {{ form_author.name }}
             </div>
@@ -21,13 +20,11 @@
         <div class="form-group">
             <label for="em_au"><h4>Email:</h4></label> {{ form_author.email }}
         </div>
-
-        </br>
-           <div class="col-md-8 col-md-offset-2">
+    </div>
+    </br>
+    <div class="col-md-8 col-md-offset-2">
         <div class="form-group">
             <button class="btn btn-primary" type="submit">Crear autor</button>
         </div>
     </div>
-    </form>
-</div>
 {% endblock %}
