--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
@@ -4,7 +4,9 @@
 {% endblock %}
 {% block container %}
 		<h2><u> Autores </u></h2>
-		<input id="myInput"type="text" onkeyup="search_table()">
+		Buscador: <input id="myInput"type="text" onkeyup="search_table()">
+		</br>
+		</br>
 		<table id="myTable">
 			<thead>
 				<tr>
