--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_list.html
@@ -39,7 +39,7 @@
                     {% endif %}
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/user_view/{{ user.id }}/">Ver</a>
+						<!--<a class="btn btn-primary" href="/user_view/{{ user.id }}/">Ver</a>-->
 						<a class="btn btn-primary" href="/user_update/{{ user.id }}/">Editar</a>
 						<a class="btn btn-danger" href="/user_update/{{ user.id }}/">Eliminar</a>
 					</td>
