--- a/biblioteca_sistedes/templates/biblioteca_sistedes/get_track.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/get_track.html
@@ -6,26 +6,32 @@
 {% csrf_token %}
 <article class="page page_168">
     <header class="wrapper">
-        <h1> {{ track.name }}</h1>
+        <h1> {{ track.name }} </h1>
     </header>
     <section id="interior" class="s">
         <div class="wrapper">
-            <hr>
-            <p>Coordinadoras:&nbsp;Carme Quer y Mª José&nbsp;Suárez</p>
-            <hr>
+            {% if track.preamble %}
+                <hr>
+                <p>{{ track.preamble }}</p>
+                <hr>
+            {% endif %}
             <p>&nbsp;</p>
+            {% if articles %}
             <p>Listado de artículos correspondientes al track {{ track.name }}</p>
             <ol id="articulo_a_conferencia_list">
                 {% for ar in articles %}
                 <li>
-                    <a href="https://biblioteca.sistedes.es/articulo/herramienta-para-la-prueba-de-mutaciones-en-el-lenguaje-c/">
+                    <a href="/articulo/{{ ar.id }}/">
                         {{ ar.name }}
                     </a>
                     <br>
-                    <span class="txtPequeno">Pedro Delgado-Pérez&nbsp;/&nbsp;Inmaculada Medina-Bulo&nbsp;/&nbsp;Juan José Domínguez-Jiménez&nbsp;/&nbsp;</span>
+                    <span class="txtPequeno">
+                        {% for au in ar.author_ids.all %} {{ au.name }} {{ au.middle_name }} {{ au.last_name }} &nbsp;/&nbsp; {% endfor %}
+                    </span>
                 </li>
                 {% endfor %}
             </ol>
+            {% endif %}
         </div>
     </section>
 </article>
