--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
@@ -13,6 +13,16 @@
         </div>
         <div class="col-md-8 col-md-offset-2">
             <div class="form-group">
+                <label for="ed_tr"><h4>Preámbulo:</h4></label> {{ form_track.preamble }}
+            </div>
+        </div>
+        <div class="col-md-8 col-md-offset-2">
+            <div class="form-group">
+                <label for="ed_tr"><h4>Descripción:</h4></label> {{ form_track.description }}
+            </div>
+        </div>
+        <div class="col-md-8 col-md-offset-2">
+            <div class="form-group">
                 <label for="ed_tr"><h4>Edición:</h4></label> {{ form_track.edition_id }}
             </div>
         </div>
