--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
@@ -3,11 +3,18 @@
 	<title>Lista de tracks | Biblioteca sistedes</title>
 {% endblock %}
 {% block container %}
+{% load static %}
 		<h2><u> Tracks </u></h2>
-
-		Buscador: <input id="myInput" type="text" onkeyup="search_table()">
-		</br>
-		</br>
+        </br>
+        </br>
+        </br>
+        <button style="float: right;" onclick="window.location.href='/track_create/'" class="button_form">Añadir + </button>
+        <input style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input alt="Buscar"
+               src="{% static 'biblioteca_sistedes/img/search.png' %}"
+               type="image">
+        </br>
+        </br>
 		{% if object_list %}
 		<table id="myTable">
 			<thead>
