--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -4,13 +4,13 @@
     {% block title %}
     <title>Inicio de sesión | Biblioteca sistedes</title>
     {% endblock %}
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
     <link href="https://biblioteca.sistedes.es/wp-content/themes/sistedes/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     {% block head %}
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/grid.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/login.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/button_style.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/form_style.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/table_style.css' %}"/>
