--- a/biblioteca_sistedes/static/biblioteca_sistedes/css/form_style.css
+++ b/biblioteca_sistedes/static/biblioteca_sistedes/css/form_style.css
@@ -8,7 +8,7 @@
     box-shadow: 0px 0px 10px rgba(0, 102, 150, 2);
     -moz-box-shadow: 0px 0px 10px rgba(0, 102, 150, 2);
     -webkit-box-shadow: 0px 0px 10px rgba(0, 102, 150, 2);
-    width: 100%;
+    width: 80%;
 }
 .form-style-10 .inner-wrap{
     padding: 30px;
@@ -83,17 +83,18 @@
     color: #fff;
     margin-top: -3px;
 }
-.form-style-10 .privacy-policy{
-    float: right;
-    width: 250px;
-    font: 20px Arial, Helvetica, sans-serif;
-    color: #4D4D4D;
-    margin-top: 10px;
-    text-align: right;
-}
 
 .form-submit {
-    background-color: #006699;
-    font-size: 16px;
-    margin: auto;
+    margin-top: 1em;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	cursor: pointer;
+	border-radius: .25em;
+	display: inline-block;
+	color: #fff;
+	padding: .25em 1em;
+	background: #006699;
+	border-bottom: 2px solid #00334d;
+	font-family: 'Open Sans';
 }
