--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
@@ -24,7 +24,6 @@
 </br>
 <h3><u> Palabras clave </u></h3>
 <div class="col-md-8 col-md-offset-2">
-    {% if keyword_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -39,22 +38,20 @@
 					<td >{{ key.name }}</td>
 
 					<td style="width: auto;">
-                        <a class="btn btn-primary" href="/keyword_view/{{ key.id }}/">Ver</a>
-						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/">Eliminar</a>
+						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-    {% else %}
+    {% if keyword_list|length == 0 %}
     <h1>No hay registros de palabras clave</h1>
     {% endif %}
 </div>
 </br>
 <h3><u> Autores </u></h3>
 <div class="col-md-8 col-md-offset-2">
-    {% if author_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -73,22 +70,21 @@
 					<td>{{ author.last_name }}</td>
 
 					<td style="width: auto;">
-                        <a class="btn btn-primary" href="/author_view/{{ author.id }}/">Ver</a>
-						<a class="btn btn-primary" href="/author_update/{{ author.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/">Eliminar</a>
+                        <a class="btn btn-primary" href="/author_view/{{ author.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+						<a class="btn btn-primary" href="/author_update/{{ author.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-    {% else %}
+    {% if author_list| length == 0 %}
     <h1>No hay registros de autores</h1>
     {% endif %}
 </div>
 </br>
 <h3><u> Tracks </u></h3>
 <div class="col-md-8 col-md-offset-2">
-    {% if track_list %}
 		<table id="myTable">
 			<thead>
 					<th>Nombre</th>
@@ -104,15 +100,15 @@
                     <td>{{ track.edition_id.name }}</td>
 
                     <td style="width: auto;">
-                        <a class="btn btn-primary" href="/track_view/{{ track.id }}/">Ver</a>
-                        <a class="btn btn-primary" href="/track_update/{{ track.id }}/">Editar</a>
-                        <a class="btn btn-danger" href="/track_delete/{{ track.id }}/">Eliminar</a>
+                        <a class="btn btn-primary" href="/track_view/{{ track.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+                        <a class="btn btn-primary" href="/track_update/{{ track.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+                        <a class="btn btn-danger" href="/track_delete/{{ track.id }}/"><i class="fa fa-trash fa-2x"></i></a>
                     </td>
                 </tr>
                 {% endfor %}
 			</tbody>
 		</table>
-    {% else %}
+    {% if track_list| length == 0 %}
     <h1>No hay registros de tracks</h1>
     {% endif %}
 </div>
