--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_list.html
@@ -9,13 +9,12 @@
         </br>
         </br>
         <button style="float: right;" class="button_form" onclick="window.location.href='/article_create/'" >Añadir + </button>
-        <input style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                type="image">
         </br>
         </br>
-		{% if object_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -29,6 +28,7 @@
 				</tr>
 
 			</thead>
+
 			<tbody>
 				{% for article in object_list %}
 				<tr>
@@ -40,15 +40,15 @@
 					<td>{{ article.track_ids }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/article_view/{{ article.id }}/">Ver</a>
-						<a class="btn btn-primary" href="/article_update/{{ article.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/article_delete/{{ article.id }}">Eliminar</a>
+						<a class="btn btn-primary" href="/article_view/{{ article.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+						<a class="btn btn-primary" href="/article_update/{{ article.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/article_delete/{{ article.id }}"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		{% else %}
+		{% if object_list|length == 0 %}
 		<h1>No hay registros de artículos</h1>
 		{% endif %}
 {% endblock%}
