--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
@@ -9,13 +9,12 @@
         </br>
         </br>
         <button style="float: right;" class="button_form" onclick="window.location.href='/author_create/'" >Añadir + </button>
-        <input style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                type="image">
         </br>
         </br>
-        {% if object_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -36,13 +35,13 @@
 					<td>{{ author.last_name }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/author_update/{{ author.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/">Eliminar</a>
+						<a class="btn btn-primary" href="/author_update/{{ author.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
-            {% else %}
+            {% if object_list|length == 0 %}
             <h1>No hay registros de autores</h1>
             {% endif %}
 {% endblock%}
