--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -56,12 +56,16 @@
                 </li>
                 {% if request.session.username %}
 
-                <li class="dropdown-submenu" >
+                <li class="dropdown-submenu">
                     <a class="test" id="user-menu" tabindex="-1" href="#" onclick="dropdown()"> <i class="fa fa-user"></i> <i class="fa fa-caret-down" style="font-size:24px"></i><span
                             class="caret"></span></a>
                     <ul id="arrow-menu" >
                             <div class="user-section">
-                                <span class="username">{{ request.session.username }}</span>
+                                {% if request.session.username|length >= 7 %}
+                                    <span class="username">{{ request.session.username|slice:"0:7" }}...</span>
+                                {% else %}
+                                    <span class="username">{{ request.session.username }}</span>
+                                {% endif %}
                             </div><br/>
                             <div>
                         <div class="dropdown-menu">
@@ -102,7 +106,7 @@
     <div style="width: 90%; margin: 0 auto; margin: 2% 5% 2% 5%">
         {% block container %}
         <form method="post" enctype="multipart/form-data">{% csrf_token %}
-            <div class="form-style-10" style="width:75%;">
+            <div class="login" style="width:75%;">
                 {% block form %}
 
                 {% endblock %}
