--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conference_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conference_detail.html
@@ -30,7 +30,6 @@
 
 			</thead>
 			<tbody>
-				{% if edition_list %}
 				{% for edition in edition_list %}
 				<tr>
 					<td>{{ edition.id }}</td>
@@ -38,15 +37,15 @@
 					<td>{{ edition.year }}</td>
 
                     <td style="width: auto;">
-                        <a class="btn btn-primary" href="/edition_view/{{ edition.id }}/">Ver</a>
-						<a class="btn btn-primary" href="/edition_update/{{ edition.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/edition_delete/{{ edition.id }}/">Eliminar</a>
+                        <a class="btn btn-primary" href="/edition_view/{{ edition.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+						<a class="btn btn-primary" href="/edition_update/{{ edition.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/edition_delete/{{ edition.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
                 </tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		{% else %}
+    {% if edition_list|length == 0 %}
 			<h1>No hay registros de ediciones</h1>
 		{% endif %}
     </div>
