--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conference_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conference_list.html
@@ -9,13 +9,12 @@
         </br>
         </br>
         <button style="float: right;" class="button_form" onclick="window.location.href='/conference_create/'" >Añadir + </button>
-        <input style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                type="image">
         </br>
         </br>
-		{% if object_list%}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -34,15 +33,15 @@
 					<td>{{ conference.domain }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/conference_view/{{ conference.id }}/">Ver    </a>
-						<a class="btn btn-primary" href="/conference_update/{{ conference.id }}/"> Editar </a>
-						<a class="btn btn-danger" href="/conference_delete/{{ conference.id }}/"> Eliminar</a>
+						<a class="btn btn-primary" href="/conference_view/{{ conference.id }}/"><i class="fa fa-eye fa-2x"></i></a>&ensp;&ensp;
+						<a class="btn btn-primary" href="/conference_update/{{ conference.id }}/"><i class="fa fa-edit fa-2x"></i> </a>&ensp;&ensp;
+						<a class="btn btn-danger" href="/conference_delete/{{ conference.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		{% else %}
+		{% if object_list|length == 0 %}
 		<h1>No hay registros de conferencias</h1>
 		{% endif %}
 {% endblock%}
