--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -9,13 +9,12 @@
         </br>
         </br>
         <button style="float: right;" class="button_form" onclick="window.location.href='/keyword_create/'" >Añadir + </button>
-        <input style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                type="image">
         </br>
         </br>
-		{% if object_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -32,16 +31,15 @@
 					<td >{{ key.name }}</td>
 
 					<td style="width: auto;">
-						<a class="btn btn-primary" href="/keyword_view/{{ key.id }}/">Ver</a>
-						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/">Eliminar</a>
+						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 
 			</tbody>
 		</table>
-		{% else %}
+		{% if object_list|length == 0 %}
 		<h1>No hay registros de palabras clave</h1>
 		{% endif %}
 {% endblock%}
