--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
@@ -9,13 +9,12 @@
         </br>
         </br>
         <button style="float: right;" onclick="window.location.href='/track_create/'" class="button_form">Añadir + </button>
-        <input style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                type="image">
         </br>
         </br>
-		{% if object_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -34,15 +33,15 @@
 					<td>{{ track.edition_id.name }}</td>
 
 					<td style="width: auto;">
-                        <a class="btn btn-primary" href="/track_view/{{ track.id }}/">Ver</a>
-						<a class="btn btn-primary" href="/track_update/{{ track.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/track_delete/{{ track.id }}/">Eliminar</a>
+                        <a class="btn btn-primary" href="/track_view/{{ track.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+						<a class="btn btn-primary" href="/track_update/{{ track.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/track_delete/{{ track.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		{% else %}
+        {% if object_list|length == 0 %}
 		<h1>No hay registros de tracks</h1>
 		{% endif %}
 
