--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_list.html
@@ -9,13 +9,12 @@
         </br>
         </br>
         <button style="float: right;" onclick="window.location.href='/user_create/'" class="button_form">Añadir + </button>
-        <input placeholder="Buscar..."style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
+        <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
                type="image">
         </br>
         </br>
-		{% if object_list %}
 		<table id="myTable">
 			<thead>
 				<tr>
@@ -48,14 +47,14 @@
 
 					<td style="width: auto;">
 						<!--<a class="btn btn-primary" href="/user_view/{{ user.id }}/">Ver</a>-->
-						<a class="btn btn-primary" href="/user_update/{{ user.id }}/">Editar</a>
-						<a class="btn btn-danger" href="/user_delete/{{ user.id }}/">Eliminar</a>
+						<a class="btn btn-primary" href="/user_update/{{ user.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a class="btn btn-danger" href="/user_delete/{{ user.id }}/"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		{% else %}
-		<h1>No hay registros de palabras clave</h1>
+		{% if object_list|length == 0 %}
+		<h1>No hay registros de usuarios</h1>
 		{% endif %}
 {% endblock%}
