--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conference_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conference_create.html
@@ -19,8 +19,10 @@
     </div>
     </br>
     <div>
-        <div>
-            <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear conferencia">
+        <div class="footer-form">
+            <input class="form-submit" type="submit" value="Crear conferencia">
+            <button onclick="window.location.href='/conference_list/'" class="cancel-button">Cancelar</button>
         </div>
+
     </div>
 {% endblock %}
