--- a/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
@@ -32,7 +32,7 @@
                 </div>
                 <!--{{ form_login.as_p }}-->
 
-                    <label>&nbsp;</label><input class="form-submit" type="submit" value="Iniciar sesión">
+                    <label>&nbsp;</label><input class="form-login" type="submit" value="Iniciar sesión">
             </form>
 
         </div>
