--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_create.html
@@ -31,6 +31,7 @@
     <div>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear track">
+            <button onclick="window.location.href='/track_list/'" class="cancel-button">Cancelar</button>
         </div>
     </div>
 {% endblock %}
