--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
@@ -48,6 +48,7 @@
         <div>
             <div>
                 <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear usuario">
+                <button onclick="window.location.href='/user_list/'" class="cancel-button">Cancelar</button>
             </div>
         </div>
 {% endblock %}
