--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -34,9 +34,8 @@
     </div>
 
     </br>
-    <div>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear artículo">
+            <button onclick="window.location.href='/article_list/'" class="cancel-button">Cancelar</button>
         </div>
-    </div>
 {% endblock %}
