--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
@@ -25,6 +25,7 @@
     <div>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear autor">
+            <button onclick="window.location.href='/author_list/'" class="cancel-button">Cancelar</button>
         </div>
     </div>
 {% endblock %}
