--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
@@ -30,6 +30,7 @@
         <div>
             <div>
                 <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear edición">
+                <button onclick="window.location.href='/edition_list/'" class="cancel-button">Cancelar</button>
             </div>
         </div>
 {% endblock %}
