--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_create.html
@@ -16,6 +16,7 @@
     <div>
         <div>
             <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear palabra clave">
+            <button onclick="window.location.href='/keyword_list/'" class="cancel-button">Cancelar</button>
         </div>
     </div>
 {% endblock %}
